WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152875
Modern IDB: Success-after-open event should only have the IDBOpenDBRequest as its target
https://bugs.webkit.org/show_bug.cgi?id=152875
Summary
Modern IDB: Success-after-open event should only have the IDBOpenDBRequest as...
Brady Eidson
Reported
2016-01-07 17:15:57 PST
Modern IDB: Success-after-open event should only have the IDBOpenDBRequest as its target As opposed to other request-related events which also capture/bubble to the transaction and the IDBDatabase
Attachments
Patch v1
(4.67 KB, patch)
2016-01-07 17:18 PST
,
Brady Eidson
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(4.35 KB, patch)
2016-01-07 19:52 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.35 KB, patch)
2016-01-07 19:54 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-07 17:18:48 PST
Created
attachment 268515
[details]
Patch v1
Alex Christensen
Comment 2
2016-01-07 17:35:27 PST
Comment on
attachment 268515
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=268515&action=review
> Source/WebCore/Modules/indexeddb/client/IDBRequestImpl.cpp:284 > + if (&event == m_openDatabaseSuccessEvent)
You do this comparison unnecessarily twice. I think it should look like this: if (&event == m_openDatabaseSuccessEvent) m_openDatabaseSuccessEvent = nullptr; else if (m_transaction) { ... }
Brady Eidson
Comment 3
2016-01-07 19:52:14 PST
Created
attachment 268528
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2016-01-07 19:53:23 PST
Attachment 268528
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/client/IDBRequestImpl.cpp:279: Extra space before ) in if [whitespace/parens] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 5
2016-01-07 19:54:49 PST
Created
attachment 268529
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2016-01-07 20:08:54 PST
Comment on
attachment 268529
[details]
Patch for landing Clearing flags on attachment: 268529 Committed
r194754
: <
http://trac.webkit.org/changeset/194754
>
WebKit Commit Bot
Comment 7
2016-01-07 20:08:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug