Source/WebCore/Modules/indexeddb/client/IDBRequestImpl.cpp
@@ -274,7 +274,9 @@ bool IDBRequest::dispatchEvent(Event& event)
     Vector<RefPtr<EventTarget>> targets;
     targets.append(this);
 
-    if (m_transaction) {
+    if (&event == m_openDatabaseSuccessEvent)
+        m_openDatabaseSuccessEvent = nullptr;
+    else if (m_transaction) {
         if (!m_transaction->isFinished())
             targets.append(m_transaction);
         if (!m_transaction->database().isClosingOrClosed())
